# dynalogo

./: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md
crates/dynalogo/: Cargo.toml
crates/dynalogo-core/: Cargo.toml
crates/dynalogo-core/benches/: collision_bench.rs  dynaturtle_tick_bench.rs  graphics_bench.rs  vm_bench.rs
crates/dynalogo-core/src/: bytecode.rs  collision.rs  demon.rs  dynaturtle.rs  generated_help.rs  graphics.rs  help.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  sim.rs  turtle.rs  value.rs  vm.rs
crates/dynalogo-core/tests/: csls_examples.rs  csls_graphics.rs  csls_input.rs  dynaturtle_snapshots.rs  file_fixtures.rs  ucblogo_compatibility.rs
crates/dynalogo-core/tests/csls/: v1_ch02_words_lists.lgo  v1_ch02_words_lists.out  v1_ch04_predicates_conditionals.lgo  v1_ch04_predicates_conditionals.out  v1_ch05_higher_order_functions.lgo  v1_ch05_higher_order_functions.out  v1_ch11_recursive_operations.lgo  v1_ch15_word_type_error.err  v1_ch15_word_type_error.lgo  v2_ch03_catch_throw.lgo  v2_ch05_program_as_data.lgo  v2_ch05_program_as_data.out  v2_ch06_basic_compiler.out  v2_ch08_property_lists.lgo  v2_ch08_property_lists.out  v2_ch10_iteration_templates.lgo  v2_ch10_iteration_templates.out  v2_ch11_crypto_ascii.out  v2_ch11_crypto_helper.lgo  v2_ch11_crypto_helper.out  v2_ch12_macros.lgo  v3_ch02_combinatorics.lgo  v3_ch02_combinatorics.out  v3_ch03_algorithms_trees.lgo  v3_ch03_algorithms_trees.out  v3_ch04_language_design.lgo  v3_ch04_language_design.out  v3_ch05_ch06_language_ai_curated.lgo
crates/dynalogo-core/tests/csls_graphics/: v1_ch10_square_label_fill.lgo
crates/dynalogo-core/tests/csls_input/: v2_ch01_file_streams.lgo  v2_ch01_file_streams.out  v2_ch01_scripted_read.in  v2_ch01_scripted_read.lgo  v2_ch02_file_diff.out  v2_ch04_solitaire_scripted.lgo  v2_ch04_solitaire_scripted.out  v2_ch07_ch09_doctor_scripted.lgo  v2_ch07_ch09_doctor_scripted.out
crates/dynalogo-core/tests/dynaturtle_snapshots/: visual_audio.lgo  visual_audio.snapshot
crates/dynalogo-core/tests/fixtures/: arithmetic.lgo  arithmetic.out  catch_error.lgo  catch_error.out  control.lgo  control.out  macros.lgo  macros.out  negative_literals.lgo  negative_literals.out  parser_compat.lgo  parser_compat.out  run_unused_value.err  (+4 more)
crates/dynalogo/src/: main.rs
(+137 files in other folders)
