[workspace]
resolver = "2"
members = ["crates/dynalogo-core", "crates/dynalogo"]

[workspace.package]
version = "1.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/feoh/dynalogo"
authors = ["Christopher Patti <feoh@feoh.org>"]

[workspace.dependencies]
dynalogo-core = { path = "crates/dynalogo-core", version = "1.0.2" }

[profile.release]
lto = "thin"
