[package]
name = "dynalogo-core"
description = "Core interpreter for DynaLOGO: lexer, parser, bytecode VM, and dynaturtle simulation engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "vm_bench"
harness = false

[[bench]]
name = "collision_bench"
harness = false
